--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for App-lcpan
 
+1.008   2016-10-08 (PERLANCAR)
+
+	- Make it work when SetEnv dzil plugin is used.
+
+
 1.007   2016-10-07 (PERLANCAR)
 
         - [Bugfix] Trap POD parsing errors to avoid dying (thanks Norbert
