--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+1.016   2017-02-02 (PERLANCAR)
+
+	- [dist] Update copyright year.
+
+        - Add argument: modules_or_dists.
+
+
 1.015   2017-01-19 (PERLANCAR)
 
 	- Add subcommand: dist-meta.
