--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+1.019   2017-06-19 (PERLANCAR)
+
+        - No functional changes.
+
+        - Replace Log::Any with Log::ger.
+
+
 1.018   2017-06-17 (PERLANCAR)
 
 	- Add script: lcpanm-script.
