--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+1.021   2018-02-08 (PERLANCAR)
+
+	- Add to builtin skip list: Shipment-3.01.tar.gz (segfaults
+	  Compiler::Lexer 0.22).
+
+
 1.020   2018-01-15 (PERLANCAR)
 
 	- lcpanm, lcpanm-script: Observe LCPANM_PERL5OPT.
