--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+1.022   2018-02-08 (PERLANCAR)
+
+	- [Bugfix] Make log level overridable from environment variable,
+	  e.g. TRACE=1.
+
+
 1.021   2018-02-08 (PERLANCAR)
 
 	- Add to builtin skip list: Shipment-3.01.tar.gz (segfaults
