--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+1.026   2018-09-08 (PERLANCAR)
+
+	- No functional changes.
+
+	- [doc] Updates, grammar fixes, and rewording.
+
+
 1.025   2018-09-07 (PERLANCAR)
 
 	- [internal][bugfix] Fix variable name in %authors_args.
