--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+1.027   2018-11-27 (PERLANCAR)
+
+	- When log level is error or lower (--quiet), silence minicpan with
+	  -q.
+
+
 1.026   2018-09-08 (PERLANCAR)
 
 	- No functional changes.
