--- a/Changes
+++ b/Changes
@@ -1,3 +1,12 @@
+1.029   2019-01-07 (PERLANCAR)
+
+	- Utilize bootstrap database (provided by App-lcpan-Bootstrap
+	  distribution) if available.
+
+	- scripts: Add shortcut option -n (for --query-type name) and -x
+	  (for --query-type exact-name), just like in mods.
+
+
 1.028   2018-11-29 (PERLANCAR)
 
 	- Add option: skip_index_file_patterns.
