--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+1.030   2019-01-07 (PERLANCAR)
+
+	- No functional changes.
+
+	- Forgot to check in documentation update to script/lcpan about
+	  using the bootstrap.
+
+
 1.029   2019-01-07 (PERLANCAR)
 
 	- Utilize bootstrap database (provided by App-lcpan-Bootstrap
