--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+1.031   2019-01-08 (PERLANCAR)
+
+	- Add option --no-use-bootstrap to prevent using bootstrap database
+	  (e.g. when indexing a darkpan).
+
+
 1.030   2019-01-07 (PERLANCAR)
 
 	- No functional changes.
