--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+1.037   2019-07-23  Released-By: PERLANCAR; Urgency: medium
+
+	- Add to builtin skip list: Shipment-3.02.tar.gz (segfaults
+          Compiler::Lexer 0.22).
+
+
 1.036   2019-07-11  Released-By: PERLANCAR; Urgency: medium
 
 	- mods, dists, authors, rels, namespaces: Add --query-type
