--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-1.037   2019-07-23  Released-By: PERLANCAR; Urgency: medium
+1.037   2019-07-23  Released-By: PERLANCAR; Urgency: high
 
 	- Add to builtin skip list: Shipment-3.02.tar.gz (segfaults
           Compiler::Lexer 0.22).
