--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+1.038   2019-08-01  Released-By: PERLANCAR; Urgency: low
+
+	- Add %pods_args.
+
+	- Tweak Rinci metadata: rename greedy -> slurpy.
+
+
 1.037   2019-07-23  Released-By: PERLANCAR; Urgency: high
 
 	- Add to builtin skip list: Shipment-3.02.tar.gz (segfaults
