--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+1.039   2019-09-19  Released-By: PERLANCAR; Urgency: medium
+
+	- Make %rdeps_level_args available from another package.
+
+
 1.038   2019-08-01  Released-By: PERLANCAR; Urgency: low
 
 	- Add %pods_args.
