--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+1.040   2019-10-05  Released-By: PERLANCAR; Urgency: medium
+
+	- [ux] Show total downloaded data after mirroring.
+
+
 1.039   2019-09-19  Released-By: PERLANCAR; Urgency: medium
 
 	- Make %rdeps_level_args available from another package.
