--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+1.042   2019-11-19  Released-By: PERLANCAR; Urgency: medium
+
+	- Add subcommands: author, dist, mod/module, rel/release, script.
+
+
 1.041   2019-10-05  Released-By: PERLANCAR; Urgency: medium
 
 	- [bugfix] Typo in variable package name, causing shown total
