--- a/Changes
+++ b/Changes
@@ -1,3 +1,12 @@
+1.045   2020-03-04  Released-By: PERLANCAR; Urgency: medium
+
+	- Add options: skip_sub_indexing_files,
+	  skip_sub_indexing_file_patterns.
+
+	- Add Bencher-Scenarios-HashSlicing-0.003.tar.gz to built-in skip
+	  list for sub indexing (eats memory).
+
+
 1.044   2020-02-13  Released-By: PERLANCAR; Urgency: low
 
 	- Add subcommand: x-mentions-for-mod.
