--- a/Changes
+++ b/Changes
@@ -164,7 +164,7 @@
 1.031   2019-01-08  Released-By: PERLANCAR
 
 	- Add option --no-use-bootstrap to prevent using bootstrap database
-	  (e.g. when indexing a darkpan).
+	  (e.g. when indexing a darkpan, or when debugging).
 
 
 1.030   2019-01-07  Released-By: PERLANCAR
