--- a/Changes
+++ b/Changes
@@ -1,3 +1,15 @@
+1.050   2020-04-19  Released-By: PERLANCAR; Urgency: medium
+
+	- [subcommand deps] Fix query: do not link queries using dist_id +
+	  is_latest because there might be several dists/releases for the same
+	  module; use dist name instead.
+
+	- [subcommand rdeps] Like deps, fix query by linking using module
+	  name instead of module ID.
+
+	- Remove App::lcpan::Manual::Cookbook (now in App-lcpan-Manual).
+
+
 1.049   2020-04-11  Released-By: PERLANCAR; Urgency: high
 
 	- [bugfix] A logic bug in --dont-uniquify option broke deps & rdeps
