--- a/Changes
+++ b/Changes
@@ -1,3 +1,19 @@
+1.053   2020-05-05  Released-By: PERLANCAR; Urgency: medium
+
+	- Bump database schema version to v14 to add 'log' table.
+
+	- [subcommand reset] Reset index_creation_time metadata, add
+          description.
+
+        - [subcommand update][bugfix] Mark files that we skip sub indexing for,
+          so we don't re-process them again and again.
+
+        - Add convenience options --added-in-last-update,
+          --updated-in-last-update.
+
+        - [subcommand author-rdeps] Add --{added,updated}-* options.
+
+
 1.052   2020-05-04  Released-By: PERLANCAR; Urgency: medium
 
 	- Bump database schema version to v13 to add rec_mtime and rec_mtime to
