--- a/Changes
+++ b/Changes
@@ -1,3 +1,12 @@
+1.054   2020-05-06  Released-By: PERLANCAR; Urgency: medium
+
+	- [bugfix] Fix typo in translating --updated-in-last-update.
+
+        - Add convenience options --{added,updated}-in-last-n-updates=n.
+
+	- [subcommand log] Reorder lcpan_version column.
+
+
 1.053   2020-05-05  Released-By: PERLANCAR; Urgency: medium
 
 	- Bump database schema version to v14 to add 'log' table.
