--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+1.055   2020-05-06  Released-By: PERLANCAR; Urgency: medium
+
+	- [testing] Add some basic tests, finally.
+
+
 1.054   2020-05-06  Released-By: PERLANCAR; Urgency: medium
 
 	- [bugfix] Fix typo in translating --updated-in-last-update.
