--- a/Changes
+++ b/Changes
@@ -1,15 +1,16 @@
 1.057   2020-05-07  Released-By: PERLANCAR; Urgency: high
 
 	- [bugfix] Fix several misplaced parameters in SQL update query which
-	  caused module & script abstract to not be set as well as distro
-	  information to not be set. This version will bump database schema
-	  version to v15 which will reset the database for reindexing.
+	  caused module & script abstract as well as distro information to not
+	  be set. This version will bump database schema version to v15 which
+	  will reset the database for reindexing.
 
         - [enhancement] Aside from full reindexing, the database schema is also
-          changed. We now remove the 'dist' table for simplicity. 'dist' has a
-          1:1 relattonship with 'file' anyway. The 'file' table now adds several
-          columns to store distro information: dist_name, dist_abstract,
-          dist_version, and is_latest_dist.
+          changed. We now remove the 'dist' table and merge the information to
+          'file' table for simplicity. 'dist' has a 1:1 relattonship with 'file'
+          anyway. The 'file' table now adds several columns to store distro
+          information: dist_name, dist_abstract, dist_version, and
+          is_latest_dist.
 
         - [subcommand deps] The subcommand can now show dependencies of older
           distros, as long as it's still indexed in 02packages. Use this syntax:
@@ -20,11 +21,14 @@
 	- [bugfix] Fix regex to catch META.json or META.yml on top-level
 	  dir, which has path 'META.yml' instead of '/META.yml'.
 
-	- [bugfix] Update authors or deleted authors were not reflected in
-	  the author table.
+	- [subcommand update][bugfix] Update authors or deleted authors were not
+	  reflected in the author table.
 
-        - [testing] Add more tests which uncovered a couple of other bugs
-          listed above.
+        - [subcommand dist2author][bugfix] Didn't return author name when there
+          is only one input dist.
+
+        - [testing] Add more tests which uncovered a few other bugs, some listed
+          above.
 
 
 1.056   2020-05-06  Released-By: PERLANCAR; Urgency: medium
