--- a/Changes
+++ b/Changes
@@ -1,3 +1,14 @@
+1.061   2020-06-11  Released-By: PERLANCAR; Urgency: medium
+
+	[subcommand mentions]
+
+        - Add --{added,updated,added-or-updated-}-* options.
+
+	[subcommand whatsnew]
+
+        - Show new mentions for you.
+
+
 1.060   2020-06-11  Released-By: PERLANCAR; Urgency: medium
 
 	- [bugfix] Fix author-deps & author-rdeps which didn't apply the
