--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+1.073   2023-07-09  Released-By: PERLANCAR; Urgency: low
+
+        - No functional changes.
+
+        - Remove use of smartmatch.
+
+
 1.072   2023-03-28  Released-By: PERLANCAR; Urgency: low
 
         - [subcommand deps] Add option --exclude-dep.
